@@ -1,25 +1,20 @@
 package rwPages;
 
+import basics.AbstractPage;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
-import org.openqa.selenium.support.PageFactory;
+import org.openqa.selenium.support.ui.ExpectedConditions;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.logging.Logger;
 
-public class SearchFieldResultPageRW {
+public class SearchFieldResultPageRW extends AbstractPage {
 
     public final Logger log = Logger.getLogger(String.valueOf(SearchFieldResultPageRW.class));
-
-    public WebDriver driver;
-
-    public SearchFieldResultPageRW (WebDriver driver){
-        PageFactory.initElements(driver, this);
-        this.driver = driver;
-    }
 
     @FindBy(className = "notetext")
     private WebElement nothingFoundText;
@@ -33,27 +28,32 @@ public class SearchFieldResultPageRW {
     @FindBy(className = "search-preview")
     private List <WebElement> links;
 
-//получить урл после введения текста
-    public String getURL() throws UnsupportedEncodingException {
+    public SearchFieldResultPageRW(WebDriver driver) {
+        super(driver);
+    }
+
+    //получить урл после введения текста
+    public String getURL() {
          driver.getCurrentUrl();
-         return URLDecoder.decode( driver.getCurrentUrl(), "UTF-8" );
+         return URLDecoder.decode( driver.getCurrentUrl(), StandardCharsets.UTF_8);
     }
 
 // проверка сообщения "по запросу ничего не найдено"
-    public String nothingFoundOnRWText() {
-        log.info(nothingFoundText.getText());
-        return nothingFoundText.getText();
+    public WebElement getNothingFoundOnRW() {
+        return nothingFoundText;
     }
 
 // поиска и введение нового текста в поисковую строку
-    public void clearSearchLine(String place) {
+    public SearchFieldResultPageRW clearSearchLine(String place) {
         searchLine.clear();
         searchLine.sendKeys(place);
+        return this;
     }
 
 // кли по кнопке начать поиск
-    public void clickOnSearchRWAfterNothingFound() {
+    public SearchFieldResultPageRW clickOnSearchRWAfterNothingFound() {
         searchButton.click();
+        return this;
     }
 
 //15 результатов на странице поиска и их текст
